--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcc 'PN'
 - !lcsh 'Futurism (Art)'
 - !lcsh 'Futurism (Literary movement)'
+- GITenberg
 title: I manifesti del futurismo
 url: http://www.gutenberg.org/ebooks/28144
